0032552: Modeling Algorithms - BRepExtrema_DistShapeShape algorithm consumes too much memory

Used a new BRepExtrema_DistShapeShape::DistanceVertVert() function to replace DistanceMapMap() to calculate vertex/vertex distance